<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- ===== MAIN ===== -->
    <item
        android:title="@string/main"
        android:enabled="false" />

    <group android:checkableBehavior="single"
        android:id="@+id/main_group">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_outline_stacks_24"
            android:title="@string/products" />

        <item
            android:id="@+id/nav_sales_invoice"
            android:icon="@drawable/invoice"
            android:title="@string/sales_invoice"/>

        <item
            android:id="@+id/nav_scheduled_visits"
            android:icon="@drawable/ic_location"
            android:title="Scheduled Visits" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/statistics"
            android:title="@string/reports" />
    </group>

    <!-- ===== ACCOUNT ===== -->
    <item
        android:title="@string/account"
        android:enabled="false" />

    <group android:checkableBehavior="single"
        android:id="@+id/account_group">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_baseline_co_present_24" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24" />
    </group>

    <!-- ===== SESSION ===== -->
    <item
        android:title="@string/session"
        android:enabled="false" />

    <group android:checkableBehavior="single"
        android:id="@+id/session_group">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_logout_24" />
    </group>

</menu>
