<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="100"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_notifications_24"/>
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:title="@string/cart"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_shopping_cart_24"/>
    <item
        android:id="@+id/action_parkedCart"
        android:orderInCategory="100"
        android:title="@string/parkedCart"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_shopping_basket_24"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"/>
</menu>