<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--item
        android:id="@+id/nav_customers"
        android:icon="@drawable/ic_outline_groups_2_24"
        android:title="@string/customers"/-->
    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/ic_outline_stacks_24"
        android:title="@string/products"/>
    <!--item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/-->
    <item
        android:id="@+id/nav_sales_invoice"
        android:icon="@drawable/invoice"
        android:title="@string/sales_invoice"/>
    <item
        android:id="@+id/nav_sales"
        android:icon="@drawable/shopping_list"
        android:title="@string/sales"/>
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/statistics"
        android:title="@string/reports"
        android:iconTint="@color/honeydew"/>
</menu>