<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/_48dp"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/_4dp"
    android:gravity="center_vertical"
xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="3">
    <TextView
        android:id="@+id/txtProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coca_cola_500ml"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtProductCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code001"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/_n4dp"
        android:layout_marginStart="@dimen/_n16dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>

    <TextView
        android:id="@+id/txtQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_2"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="end"
        android:text="@string/_120_00"/>

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="end"
        android:text="@string/_240_00"/>

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_delete_forever_24"
        android:contentDescription="@string/remove"/>
</LinearLayout>
