<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/honeydew"
    android:orientation="vertical"
    android:padding="@dimen/_24dp">

    <ImageView
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/location_icon"
        android:src="@drawable/ic_location" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/location_required"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24dp"
        android:gravity="center"
        android:text="@string/please_enable_location_services_and_grant_location_permission_to_continue"
        android:textSize="@dimen/_14sp" />

    <Button
        android:id="@+id/btnGrantPermission"
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/rounded_primary_button"
        android:padding="@dimen/_12dp"
        android:text="@string/grant_permission"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/_8dp" />

    <Button
        android:id="@+id/btnEnableGps"
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/rounded_primary_outline_button"
        android:padding="@dimen/_12dp"
        android:text="@string/enable_gps"
        android:textColor="@color/teal_700"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/_8dp" />

    <Button
        android:id="@+id/btnRetryLocation"
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/rounded_secondary_outline_button"
        android:padding="@dimen/_12dp"
        android:text="@string/retry"
        android:textColor="@color/red"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/_8dp" />

    <Button
        android:id="@+id/btnExitLocation"
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/rounded_secondary_button"
        android:padding="@dimen/_12dp"
        android:text="@string/exit"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/_8dp" />
</LinearLayout>